--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,13 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fksl.js, img-url=https://ae01.alicdn.com/kf/U1d2f24494aa1460286360f8bb0e10210Y.jpg, enabled=true, tag=疯狂森林
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/scdcg.js, img-url= https://ae01.alicdn.com/kf/U9f2a16b203ed40318d22f9fd5fdce9a9S.jpg, enabled=true, tag=食材大冲关
+cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmlzc.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=全民来找茬
+cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmdff.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=全民大丰收
+cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东海尔欢乐大逃亡
+cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东刺客567之寻宝
+cron "13 1,22,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东每日抽奖
 cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=WGC
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zsb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=再生贝
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ttcj.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=天天抽奖365
@@ -11,9 +18,9 @@ cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/
 cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qlp.js, img-url=https://ae01.alicdn.com/kf/Uc2775b8f4abf41788ba89df0317e58050.jpg, enabled=true, tag=考状元娶老婆
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=如意花园
 cron "9 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会(查看脚本学用法)
-cron "*/60 * * * *" script-path=http://nm66.top/dydhb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=抖音抖一抖红包
-cron "*/1 * * * *" script-path=http://nm66.top/dyd.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=抖音抖一抖
-cron "*/10 * * * *" script-path=http://nm66.top/kxdfs.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=开心大丰收
+cron "*/60 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/dydhb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=抖音抖一抖红包
+cron "*/1 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/dyd.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=抖音抖一抖
+cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/kxdfs.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=开心大丰收
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/cglm.js, enabled=true, 
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
@@ -24,7 +31,7 @@ cron "0 8 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/m
 cron "5 */2 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit_collectWater.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家果园收水滴
 cron "10 0,8,11,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家果园任务
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/skjh.js, img-url=https://ae01.alicdn.com/kf/Ue353b658a4424a1e873d0b66620d06a41.jpg, enabled=true, tag=食客江湖
-cron "*/10 * * * *" script-path=http://nm66.top/fhxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬富豪小镇
+cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/fhxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬富豪小镇
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/dogeda.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=DOGEDA
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读修复版
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=火狐看看
