--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,8 +2,15 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/csxdr.js, img-url=https://ae01.alicdn.com/kf/Udd9cb36174cf41a7a69e28a643a360a9a.jpg, enabled=true, tag=超市小达人
 cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=海尔_欢乐大逃亡
-cron "0 1 0/5 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/fcs.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/fcs.png, enabled=true, tag=发财树
+cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fksl.js, img-url=https://ae01.alicdn.com/kf/U1d2f24494aa1460286360f8bb0e10210Y.jpg, enabled=true, tag=疯狂森林
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/scdcg.js, img-url= https://ae01.alicdn.com/kf/U9f2a16b203ed40318d22f9fd5fdce9a9S.jpg, enabled=true, tag=食材大冲关
+cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmlzc.js, img-url=https://qxzy.top/rules/QuantumultX/img/qmlzc.png, enabled=true, tag=全民来找茬
+cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmdff.js, img-url=https://qxzy.top/rules/QuantumultX/img/qmdff.png, enabled=true, tag=全民大丰收
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zsb.js, img-url=https://qxzy.top/rules/QuantumultX/img/zsb.png, enabled=true, tag=再生贝
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ttcj.js, img-url=https://qxzy.top/rules/QuantumultX/img/ttcj.png, enabled=true, tag=天天抽奖365
+cron "0 1 0/5 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/fcs.js, img-url=https://qxzy.top/rules/QuantumultX/img/fcs.png, enabled=true, tag=发财树
 cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=刺客567之寻宝
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/kkj.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkj.png, enabled=true, tag=看看集
 cron "13 1,22,23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_daily_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=每日抽奖
@@ -18,7 +25,7 @@ cron "*/60 * * * *" script-path=http://nm66.top/dydhb.js, img-url=https://qxzy.t
 cron "*/1 * * * *" script-path=http://nm66.top/dyd.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖
 cron "*/10 * * * *" script-path=http://nm66.top/kxdfs.js, img-url=https://qxzy.top/rules/QuantumultX/img/kxdfs.png, enabled=true, tag=开心大丰收
 cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qlp.js, img-url=https://ae01.alicdn.com/kf/Uc2775b8f4abf41788ba89df0317e58050.jpg, enabled=true, tag=考状元娶老婆
-cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://qxzy.top/rules/QuantumultX/img/wgc.png, enabled=true, tag=WGC
+cron "40 * * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://qxzy.top/rules/QuantumultX/img/wgc.png, enabled=true, tag=WGC
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yt.js, img-url=https://qxzy.top/rules/QuantumultX/img/yt.png, enabled=true, tag=炎兔
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ggdh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ggdh.png, enabled=true, tag=狗狗大亨
