--- a/task/chenzhe.conf
+++ b/task/chenzhe.conf
@@ -4,6 +4,8 @@ cron "3 10 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/mast
 cron "0 0,1-22/2 1-31 4-7 *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/chenzhe/monk_pasture.js, enabled=true, tag=有机牧场
 cron "10 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, tag=京东小魔方
 
+cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, tag=探秘无限星空
+
 # cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, enabled=false, tag=京东手机狂欢城
 # cron "3 10 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/chenzhe/jd_fanslove.js, enabled=false, tag=粉丝互动
 # cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/chenzhe/jd_entertainment.js, enabled=false, tag=百变大咖秀
