--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,10 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "8 8 8 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xm.js, img-url=https://qxzy.top/rules/QuantumultX/img/xm.png, enabled=true, tag=小芒
+cron "11 11 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/shzx.js, img-url=https://qxzy.top/rules/QuantumultX/img/shzx.png, enabled=true, tag=搜狐资讯
+cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=探秘无限星空
+cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ipxz.js, img-url=https://qxzy.top/rules/QuantumultX/img/ipxz.png, enabled=true, tag=ip小站
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/csxdr.js, img-url=https://ae01.alicdn.com/kf/Udd9cb36174cf41a7a69e28a643a360a9a.jpg, enabled=true, tag=超市小达人
 cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=海尔_欢乐大逃亡
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fksl.js, img-url=https://ae01.alicdn.com/kf/U1d2f24494aa1460286360f8bb0e10210Y.jpg, enabled=true, tag=疯狂森林
