--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,14 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "10 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://gitee.com/passerby-b/javascript/raw/master/icon/didi.png, enabled=true, tag=滴滴免费水果(手动获取token)
+cron "0 0 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/ningmeng@main/ydf.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬运动福极速版
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ipxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=ip小站
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ecwk.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=EC挖矿
+cron "0 1 0/5 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/fcs.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=发财树
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/kkj.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=看看集
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/csxdr.js, img-url=https://ae01.alicdn.com/kf/Udd9cb36174cf41a7a69e28a643a360a9a.jpg, enabled=true, tag=超市小达人
+cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东探秘无限星空
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fksl.js, img-url=https://ae01.alicdn.com/kf/U1d2f24494aa1460286360f8bb0e10210Y.jpg, enabled=true, tag=疯狂森林
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/scdcg.js, img-url= https://ae01.alicdn.com/kf/U9f2a16b203ed40318d22f9fd5fdce9a9S.jpg, enabled=true, tag=食材大冲关
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmlzc.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=全民来找茬
@@ -8,6 +16,7 @@ cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ning
 cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东海尔欢乐大逃亡
 cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东刺客567之寻宝
 cron "13 1,22,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东每日抽奖
+cron "0 0 21 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhf.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=WGC换话费
 cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=WGC
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zsb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=再生贝
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ttcj.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=天天抽奖365
