--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "11 11 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/shzx.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/souhu.png, enabled=true, tag=搜狐资讯
+cron "8 8 8 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xm.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/xiaomang.png, enabled=true, tag=小芒
 cron "10 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://gitee.com/passerby-b/javascript/raw/master/icon/didi.png, enabled=true, tag=滴滴免费水果(手动获取token)
 cron "0 0 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/ningmeng@main/ydf.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬运动福极速版
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ipxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=ip小站
