--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 7 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushBoxjsCookie_elecV2p.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/jiejie.png, enabled=true, tag=手机boxjs的Cookie自动上传V2p
 cron "11 11 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/shzx.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/souhu.png, enabled=true, tag=搜狐资讯
 cron "8 8 8 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xm.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/xiaomang.png, enabled=true, tag=小芒
 cron "10 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://gitee.com/passerby-b/javascript/raw/master/icon/didi.png, enabled=true, tag=滴滴免费水果(手动获取token)
@@ -10,13 +11,10 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/
 cron "0 1 0/5 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/fcs.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=发财树
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/kkj.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=看看集
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/csxdr.js, img-url=https://ae01.alicdn.com/kf/Udd9cb36174cf41a7a69e28a643a360a9a.jpg, enabled=true, tag=超市小达人
-cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东探秘无限星空
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fksl.js, img-url=https://ae01.alicdn.com/kf/U1d2f24494aa1460286360f8bb0e10210Y.jpg, enabled=true, tag=疯狂森林
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/scdcg.js, img-url= https://ae01.alicdn.com/kf/U9f2a16b203ed40318d22f9fd5fdce9a9S.jpg, enabled=true, tag=食材大冲关
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmlzc.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=全民来找茬
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmdff.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=全民大丰收
-cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东海尔欢乐大逃亡
-cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东刺客567之寻宝
 cron "13 1,22,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东每日抽奖
 cron "0 0 21 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhf.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=WGC换话费
 cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=WGC
@@ -25,7 +23,6 @@ cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yt.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=❗炎兔
 cron "0 0 0/1 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/btdh.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=❗比特大亨
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ggdh.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=❗狗狗大亨
-cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shop_captain.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东超级无线组队分奖品
 cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qlp.js, img-url=https://ae01.alicdn.com/kf/Uc2775b8f4abf41788ba89df0317e58050.jpg, enabled=true, tag=考状元娶老婆
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=如意花园
 cron "9 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会(查看脚本学用法)
@@ -55,12 +52,9 @@ cron "7 24,47 12 * * ?" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScri
 cron "10 16 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（加购）
 cron "10 16 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
-cron "25 8 * 4-5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/z_tcl_lining.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东幸运大转盘0301版
 cron "5-45/20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health_collect.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东健康社区收能量0301版
-cron "25 * * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_health_energy.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东健康社区收能量藏经阁版
 cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东健康社区0301版
-cron "25 10-22/3 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_health_community.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东健康社区藏经阁版
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/smyj.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=圣牧有机
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=新亚链
 cron "35 12,18 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xbgg.js, img-url=https://ae01.alicdn.com/kf/U466ffce93b584c5babd1127f32f5ddebX.jpg, enabled=true, tag=讯播广告
@@ -72,22 +66,6 @@ cron "1 7,12,19 * * *" script-path=https://raw.githubusercontent.com/sngxpro/Qua
 cron "20 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, img-url=https://ae01.alicdn.com/kf/Uf3f262fb6d81492a8e350a0bb97a04a0g.jpg, enabled=true, tag=久金人脉
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, img-url=https://ae01.alicdn.com/kf/Ub0056a0721e94c9a85a8bbeb2f2aed6fn.jpg, enabled=true, tag=招招试药
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/scripts/main/snjc/snjc.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=酸奶机场签到
-cron "15 08 5-30 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/monk_vinda.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东维达品牌日
-cron "0 0 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/monk_inter_shop_sign.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=interCenter渠道店铺签到
-cron "3 0,10,23 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/monk_shop_lottery.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东店铺大转盘
-cron "15 15 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/monk_shop_follow_sku.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东关注有礼
-cron "15 12 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/monk_shop_add_to_car.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东加购有礼
-cron "0 0,1-22/2 1-31 4-7 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/monk_pasture.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东有机牧场
-cron "10 10 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_xmf.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东小魔方
-cron "5 8,14,20 6-13 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_mother_jump.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东母婴-跳一跳二期
-cron "3 10 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_fanslove.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东粉丝互动
-cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_entertainment.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东百变大咖秀
-cron "0 0-18/6 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东手机狂欢城
-cron "3 10 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_marketLottery.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东超市-大转盘
-cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_super5g.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东5G超级盲盒
-cron "3 20 * * *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shake.js, img-url=https://raw.githubusercontent.com/sngxpro/AutoSyncScript/i-chenzhe/img/icon.png, enabled=true, tag=京东chenzhe摇一摇
-cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/self/main/delete/gone/monk_skyworth.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东创维全勤奖(不加购)
-cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/ar/monk_skyworth_car.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东创维全勤奖(加购)
 cron "7 7 7-20 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/yqnb.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/lisha.png, enabled=true, tag=易趣牛帮
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, img-url=https://ae01.alicdn.com/kf/U7bcabce8ea7644f18e3c84f65907e34bf.jpg, enabled=true, tag=部落农场
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/nuoaier.png, enabled=true, tag=兴盛优选小程序
