--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -95,7 +95,7 @@ cron "0,30 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScrip
 cron "0,30 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/bububao.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/babala.png, enabled=true, tag=步步宝ziye版
 cron "0 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/zhima.js, img-url=https://s3.ax1x.com/2021/02/06/yYzeWn.png, enabled=true, tag=芝嫲视频ziye版(查看脚本有用法)
 cron "0/15 1-6 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xiaole.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/keli.png, enabled=true, tag=小乐优券微信小程序
-cron "*/30 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/iboxpay.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱ziye版(查看脚本学用法，请挂全局用方法一)
+cron "*/30 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/iboxpay.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱ziye版
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jxcollect.js, img-url=https://raw.githubusercontent.com/i-chenzhe/qx/master/img/icon.png, enabled=true, tag=京东京喜工厂收电力（需单抓ck）
 cron "10 */1 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/youth.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, enabled=true, tag=sunert中青签到&转盘宝箱&时长
 cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/Youth_Read.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, enabled=true, tag=sunert中青自动阅读
@@ -159,7 +159,7 @@ cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/Githu
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/RUNSTEP/cash.js, img-url=https://gitee.com/ydj0602/hym/raw/img/ZLZQ1.png, enabled=true, tag=走路赚钱-提现专用
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, img-url=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/wechat.png, enabled=true, tag=公众号监控
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, img-url=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/klcw.png, enabled=true, tag=酷乐潮玩App
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/xp.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱执意版（查看脚本学用法，推荐子夜版）
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/xp.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱执意版
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxcfd.png, enabled=true, tag=京喜财富岛
 cron "2 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_change.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京豆变动通知
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_bean_home.png, enabled=true, tag=领京豆额外奖励
