--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ztxtop/x/aa4ddeca813fbf5c231dd4adaec68a7632cb292c/jx_cfdtx.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, enabled=true, tag=京喜财富岛提现并发修改版ztxtop
 cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushBoxjsCookie_elecV2p.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/jiejie.png, enabled=true, tag=手机boxjs的Cookie自动上传V2p
 cron "15 8 9-13 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东探秘无限星空
 cron "15 8 7-31 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东海尔_欢乐大逃亡
@@ -161,7 +162,6 @@ cron "15 12,14,16,20,22 * * *" script-path=https://ghproxy.com/https://raw.githu
 cron "30 8,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/58xinian/icon/master/jxcfd.png, enabled=true, tag=京喜财富岛(改)
 cron "15 12,14,16,20 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/dka.js, img-url=https://s3.ax1x.com/2021/02/28/6C3Gpn.jpg, enabled=true, tag=蛋咖
 cron "0 */10 * * * ?" script-path=https://pan.meitudou.cn/Task/QQread.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/QQRead.png, enabled=true, tag=QQ阅读
-cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/wuzhi03/MyActions/main/jx_cfdtx.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, enabled=true, tag=京喜财富岛提现
 cron "30 6,12,22 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd_exchange.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, enabled=true, tag=京喜财富岛兑换提醒
 cron "5,35 8-23 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jrtt.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/jrtt.png, enabled=true, tag=今日头条极速版
 cron "0 */30 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/hotsoon.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/huoshan.png, enabled=true, tag=火山视频极速版
